@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.53 2004/05/25 14:55:34 adam Exp $
+# $NetBSD: Makefile,v 1.54 2004/06/20 21:46:36 xtraeme Exp $
 
 DISTNAME=	gd-2.0.25
+PKGREVISION=	1
 CATEGORIES=	graphics
 MASTER_SITES=	http://www.boutell.com/gd/http/
 
@@ -12,10 +13,9 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 USE_BUILDLINK3=		YES
 USE_LIBTOOL=		YES
-USE_X11=		YES
 GNU_CONFIGURE=		YES
 REPLACE_PERL=		bdftogd
-LIBS+=			-lpthread
+LIBS+=			${PTHREAD_LDFLAGS}
 
 BUILDLINK_DEPENDS.freetype2=	freetype2>=2.1.4
 
@@ -23,7 +23,6 @@ BUILDLINK_DEPENDS.freetype2=	freetype2>=2.1.4
 .include "../../graphics/freetype2/buildlink3.mk"
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
-.include "../../graphics/xpm/buildlink3.mk"
 
 .include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
