@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6251 2004/06/20 21:40:49 martin Exp $
+$NetBSD: CHANGES,v 1.6252 2004/06/20 21:46:36 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2984,3 +2984,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated msmtp to 1.0.0 [xtraeme 2004-06-20]
 	Updated gdm to 2.6.0.3 [jmmv 2004-06-20]
 	Updated cdrecord to 2.00.3nb1 [martin 2004-06-20]
+	Updated gd to 2.0.25nb1 [xtraeme 2004-06-20]
